--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "expo": "~54.0.10",
+    "expo-camera": "~17.0.8",
+    "expo-gl": "~16.0.7",
+    "expo-gl-cpp": "^11.4.0",
     "expo-linear-gradient": "^15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-three": "^8.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4"
   },
