--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@tensorflow/tfjs-react-native": "^0.8.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "~1.23.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.1.7",
     "expo": "~54.0.10",
     "expo-camera": "~17.0.8",
-    "expo-gl": "~16.0.7",
-    "expo-gl-cpp": "^11.4.0",
     "expo-linear-gradient": "^15.0.7",
+    "expo-localization": "~15.0.3",
+    "expo-sensors": "^15.0.7",
     "expo-status-bar": "~3.0.8",
-    "expo-three": "^8.0.0",
+    "i18next": "^23.15.2",
+    "intl-pluralrules": "^2.0.1",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-i18next": "^15.5.2",
+    "react-native": "0.81.4",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^4.16.0"
   },
   "private": true
 }
