--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@mediapipe/pose": "^0.5.1675469404",
     "@react-native-async-storage/async-storage": "~1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.1.7",
+    "@tensorflow-models/pose-detection": "^2.1.0",
+    "@tensorflow/tfjs": "^4.10.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
+    "base64-js": "^1.5.1",
     "expo": "~54.0.10",
     "expo-camera": "~17.0.8",
+    "expo-gl": "~15.0.2",
     "expo-linear-gradient": "^15.0.7",
     "expo-localization": "~15.0.3",
     "expo-sensors": "^15.0.7",
@@ -25,6 +31,7 @@
     "react": "19.1.0",
     "react-i18next": "^15.5.2",
     "react-native": "0.81.4",
+    "react-native-fs": "^2.20.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^4.16.0"
