--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^15.0.2",
     "@mediapipe/pose": "^0.5.1675469404",
-    "@react-native-async-storage/async-storage": "~1.23.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.1.7",
     "@tensorflow-models/pose-detection": "^2.1.0",
     "@tensorflow/tfjs": "^4.10.0",
+    "@tensorflow/tfjs-backend-webgpu": "^4.22.0",
     "@tensorflow/tfjs-react-native": "^0.8.0",
     "base64-js": "^1.5.1",
     "expo": "~54.0.10",
     "expo-camera": "~17.0.8",
-    "expo-gl": "~15.0.2",
+    "expo-gl": "~16.0.7",
     "expo-linear-gradient": "^15.0.7",
-    "expo-localization": "~15.0.3",
+    "expo-localization": "~17.0.7",
     "expo-sensors": "^15.0.7",
     "expo-status-bar": "~3.0.8",
     "i18next": "^23.15.2",
@@ -33,7 +34,7 @@
     "react-native": "0.81.4",
     "react-native-fs": "^2.20.0",
     "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "^4.10.7",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.16.0"
   },
   "private": true
